[package]
name = "fincept-terminal-desktop"
version = "3.2.1"
description = "Professional-grade financial analysis platform with AI-powered insights and real-time market data"
authors = ["Fincept Corporation <support@fincept.in>"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://product.fincept.in"
repository = "https://github.com/Fincept-Corporation/FinceptTerminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fincept_terminal_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-cors-fetch = "4"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.8"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
once_cell = "1.20"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
zip = "2.2"
printpdf = "0.7"
flate2 = "1.0"  # For tar.gz extraction (macOS/Linux)
hashbrown = "0.15"  # Faster HashMap alternative
ahash = "0.8"  # Fast hashing for orderbook

# WebSocket dependencies
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }  # WebSocket client with TLS support
dashmap = "6"  # Concurrent HashMap for subscriptions
url = "2"  # URL parsing for WebSocket connections
async-trait = "0.1"  # Async trait support
thiserror = "2"  # Error handling

tracing = "0.1"
futures = "0.3"
regex = "1.12.2"
quick-xml = "0.37"  # Fast XML/RSS parsing
rand = "0.8"  # Random number generation for paper trading
aes-gcm = "0.10"  # AES-256-GCM encryption for secure credential storage
base64 = "0.22"  # Base64 encoding/decoding for encrypted data
csv = "1.3"  # CSV parsing for master contract data
urlencoding = "2.1"  # URL encoding for API parameters
totp-rs = { version = "5", features = ["gen_secret"] }  # TOTP generation for AngelOne auto-auth

[target.'cfg(target_os = "windows")'.dependencies]
[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
